Add auto update checking.

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -25,6 +25,8 @@
 	<string name="max_times_per_day">每日最大锻炼次数</string>
 	<string name="min_distance">单次锻炼最短距离（m）</string>
 	<string name="name">姓名</string>
+	<string name="update_available_message"><xliff:g>%1$s</xliff:g> 已经发布。请更新至最新版本。</string>
+	<string name="update_available_title">版本更新</string>
 	<string name="next">下一步</string>
 	<string name="password">密码</string>
 	<string name="query_count">查询已上传次数</string>
