--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
 	<string name="max_times_per_day">Max Times per Day</string>
 	<string name="min_distance">Min Distance (m)</string>
 	<string name="name">Name</string>
+	<string name="update_available_message">A new version <xliff:g>%1$s</xliff:g> has been released. Please update.</string>
+	<string name="update_available_title">Update Available</string>
 	<string name="next">Next</string>
 	<string name="now" translatable="false">NOW</string>
 	<string name="password">Password</string>
