--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
 	<string name="now" translatable="false">NOW</string>
 	<string name="password">Password</string>
 	<string name="query_count">Query count</string>
-	<string name="query_count_message">You have uploaded <xliff:g>%d</xliff:g> records.</string>
+	<string name="query_count_message">You have uploaded <xliff:g>%1$d</xliff:g> records.</string>
 	<string name="query_count_title">Query Count</string>
 	<string name="rebind">Rebind</string>
 	<string name="recording_channel_desc">The notification shown when you\'re recording your running status.</string>
