--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 	<string name="about">关于此应用</string>
 	<string name="admission_year">入学年份</string>
+	<string name="allow_location_mocking">允许模拟位置信息</string>
 	<string name="app_name">绿蜻蜓</string>
 	<string name="back">返回</string>
 	<string name="bind">绑定</string>
@@ -10,8 +11,10 @@
 	<string name="class_id">班级</string>
 	<string name="close">关闭</string>
 	<string name="confirm">确认</string>
+	<string name="debug_options">调试选项</string>
 	<string name="delete">删除</string>
 	<string name="distance_template"><xliff:g>%1$.2f</xliff:g> m</string>
+	<string name="enable_location_logging">在日志中写入位置信息</string>
 	<string name="error">错误</string>
 	<string name="error_bind">绑定账号时遇到错误</string>
 	<string name="error_get_schools">获取学校列表时遇到错误</string>
