--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
 	<string name="edit_record">Edit Record</string>
 	<string name="enable_location_logging">Enable location logging.</string>
 	<string name="error">Error</string>
-	<string name="error_bind">Error occurred when binding to the account.</string>
-	<string name="error_get_schools">Error occurred when retrieving the school list.</string>
-	<string name="error_get_user">Error occurred when retrieving user information. Please check your input.</string>
+	<string name="error_bind">Error occurred when binding to the account: %1$s</string>
+	<string name="error_get_schools">Error occurred when retrieving the school list: %1$s</string>
+	<string name="error_get_user">Error occurred when retrieving user information: %1$s</string>
 	<string name="error_query_count">Error occurred when querying uploaded record count.</string>
 	<string name="error_upload">Error occurred when trying to upload the record.</string>
 	<string name="female">Female</string>
