Support newer server versions.

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,6 +4,8 @@
 	<string name="admission_year">入学年份</string>
 	<string name="allow_location_mocking">允许模拟位置信息</string>
 	<string name="allow_record_editing">允许编辑记录</string>
+	<string name="allowed_date">可锻炼日期</string>
+	<string name="allowed_time">可锻炼时间</string>
 	<string name="app_name">绿蜻蜓</string>
 	<string name="back">返回</string>
 	<string name="bind">绑定</string>
@@ -55,16 +57,24 @@
 	<string name="start_date">开始日期</string>
 	<string name="start_time">开始时间</string>
 	<string name="status_conflict">已达到当日最大次数</string>
-	<string name="status_invalid">未达标</string>
+	<string name="status_date_invalid">不在可锻炼日期内</string>
+	<string name="status_distance_invalid">距离未达标</string>
+	<string name="status_speed_invalid">速度未达标</string>
+	<string name="status_time_invalid">不在可锻炼时间内</string>
 	<string name="status_pending">待上传</string>
 	<string name="status_uploaded">已上传</string>
 	<string name="student_id">学号</string>
+	<string name="to">至</string>
 	<string name="upload">上传</string>
+	<string name="upload_failed">上传失败</string>
 	<string name="upload_result">上传结果</string>
+	<string name="upload_succeeded">上传成功</string>
 	<string name="uploaded">已上传</string>
 	<string name="user">用户信息</string>
 	<string name="version_template">版本：%1$s</string>
 	<string name="waiting_location">正在获取位置信息</string>
+	<string name="warn_invalid_date">今天不是可锻炼日期，确定要开始锻炼吗？</string>
+	<string name="warn_invalid_time">现在不是可锻炼时间，确定要开始锻炼吗？</string>
 	<string name="warn_no_location">尚未收到定位数据，如果此时退出本次锻炼不会被记录。确定要结束锻炼吗？</string>
 	<string name="warn_not_in_range">你尚未达到锻炼要求。确定要结束锻炼吗?</string>
 	<string name="warning">警告</string>
