--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
 	<string name="admission_year">Admission Year</string>
 	<string name="allow_location_mocking">Allow location mocking.</string>
 	<string name="allow_record_editing">Allow record editing.</string>
+	<string name="allowed_date">Allowed Date</string>
+	<string name="allowed_time">Allowed Time</string>
 	<string name="app_name">Green Dragonfly</string>
 	<string name="average" translatable="false">AVG</string>
 	<string name="back">Back</string>
@@ -57,16 +59,24 @@
 	<string name="start_date">Start date</string>
 	<string name="start_time">Start time</string>
 	<string name="status_conflict">Max times per day reached</string>
-	<string name="status_invalid">Requirements not met</string>
+	<string name="status_date_invalid">Not on allowed date</string>
+	<string name="status_distance_invalid">Speed requirement not met</string>
+	<string name="status_speed_invalid">Distance requirement not met</string>
+	<string name="status_time_invalid">Not in allowed time</string>
 	<string name="status_pending">Not uploaded</string>
 	<string name="status_uploaded">Uploaded</string>
 	<string name="student_id">Student ID</string>
+	<string name="to"> to </string>
 	<string name="upload">Upload</string>
 	<string name="uploaded">Uploaded</string>
+	<string name="upload_failed">Upload failed</string>
 	<string name="upload_result">Upload Result</string>
+	<string name="upload_succeeded">Upload succeeded</string>
 	<string name="user">User</string>
 	<string name="version_template">Version: %1$s</string>
 	<string name="waiting_location">Waiting for location data</string>
+	<string name="warn_invalid_date">Today is not an allowed date. Do you want to start anyway?</string>
+	<string name="warn_invalid_time">It is not in allowed time now. Do you want to start anyway?</string>
 	<string name="warn_no_location">No location data has been received so nothing will be recorded. Do you want to finish anyway?</string>
 	<string name="warn_not_in_range">You haven\'t met the exercising requirements yet. Do you want to finish anyway?</string>
 	<string name="warning">Warning</string>
